Phase2/parser.output
Grammar

    0 $accept: program $end

    1 program: statements statement
    2        | ε

    3 statement: expression TOK_SEMICOLON
    4          | if_statement
    5          | while_statement
    6          | for_statement
    7          | return_statement
    8          | TOK_CONTINUE TOK_SEMICOLON
    9          | TOK_BREAK TOK_SEMICOLON
   10          | block
   11          | funcdef
   12          | TOK_SEMICOLON
   13          | error TOK_SEMICOLON

   14 statements: statements statement
   15           | ε

   16 expression: assignexpr
   17           | expression TOK_PLUS expression
   18           | expression TOK_MINUS expression
   19           | expression TOK_MULTIPLY expression
   20           | expression TOK_DIVIDE expression
   21           | expression TOK_MODULO expression
   22           | expression TOK_GREATER expression
   23           | expression TOK_LESS expression
   24           | expression TOK_GR_EQUAL expression
   25           | expression TOK_LS_EQUAL expression
   26           | expression TOK_EQUAL expression
   27           | expression TOK_N_EQUAL expression
   28           | expression TOK_AND expression
   29           | expression TOK_OR expression
   30           | term

   31 term: TOK_L_PARENTH expression TOK_R_PARENTH
   32     | UMINUS expression
   33     | TOK_NOT expression
   34     | TOK_DBL_PLUS lvalue
   35     | lvalue TOK_DBL_PLUS
   36     | TOK_DBL_MINUS lvalue
   37     | lvalue TOK_DBL_MINUS
   38     | primary

   39 assignexpr: lvalue TOK_ASSIGN expression

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | TOK_L_PARENTH funcdef TOK_R_PARENTH
   44        | const

   45 lvalue: TOK_ID
   46       | TOK_LOCAL TOK_ID
   47       | TOK_DBL_COLON TOK_ID
   48       | member

   49 member: lvalue TOK_DOT TOK_ID
   50       | lvalue TOK_L_BR expression TOK_R_BR
   51       | call TOK_DOT TOK_ID
   52       | call TOK_L_BR expression TOK_R_BR

   53 call: call normcall
   54     | lvalue callsuffix
   55     | TOK_L_PARENTH funcdef TOK_R_PARENTH normcall

   56 callsuffix: normcall
   57           | methodcall

   58 normcall: TOK_L_PARENTH elist TOK_R_PARENTH

   59 methodcall: TOK_DBL_DOT TOK_ID normcall

   60 elist: expression
   61      | elist TOK_COMMA expression
   62      | ε

   63 indexed: indexedelem
   64        | indexed TOK_COMMA indexedelem

   65 objectdef: TOK_L_BR elist TOK_R_BR
   66          | TOK_L_BR indexed TOK_R_BR

   67 indexedelem: TOK_L_CURLY_BR expression TOK_COLON expression TOK_R_CURLY_BR

   68 $@1: ε

   69 block: TOK_L_CURLY_BR $@1 statements TOK_R_CURLY_BR

   70 $@2: ε

   71 funcdef_block: TOK_L_CURLY_BR $@2 statements TOK_R_CURLY_BR

   72 $@3: ε

   73 funcdef: TOK_FUNCTION TOK_ID TOK_L_PARENTH $@3 idlist TOK_R_PARENTH funcdef_block

   74 $@4: ε

   75 funcdef: TOK_FUNCTION TOK_L_PARENTH $@4 idlist TOK_R_PARENTH funcdef_block

   76 const: TOK_INT
   77      | TOK_FLOAT
   78      | TOK_STRING
   79      | TOK_NIL
   80      | TOK_TRUE
   81      | TOK_FALSE

   82 idlist: TOK_ID
   83       | idlist TOK_COMMA TOK_ID
   84       | ε

   85 if_statement: TOK_IF TOK_L_PARENTH expression TOK_R_PARENTH statement
   86             | TOK_IF TOK_L_PARENTH expression TOK_R_PARENTH statement TOK_ELSE statement

   87 while_statement: TOK_WHILE TOK_L_PARENTH expression TOK_R_PARENTH statement

   88 for_statement: TOK_FOR TOK_L_PARENTH elist TOK_SEMICOLON expression TOK_SEMICOLON elist TOK_R_PARENTH statement

   89 return_statement: TOK_RETURN TOK_SEMICOLON
   90                 | TOK_RETURN expression TOK_SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256) 13
    TOK_IF (258) 85 86
    TOK_ELSE (259) 86
    TOK_WHILE (260) 87
    TOK_FOR (261) 88
    TOK_FUNCTION (262) 73 75
    TOK_RETURN (263) 89 90
    TOK_BREAK (264) 9
    TOK_CONTINUE (265) 8
    TOK_AND (266) 28
    TOK_NOT (267) 33
    TOK_OR (268) 29
    TOK_LOCAL (269) 46
    TOK_TRUE (270) 80
    TOK_FALSE (271) 81
    TOK_NIL (272) 79
    TOK_ASSIGN (273) 39
    TOK_PLUS (274) 17
    TOK_MINUS (275) 18
    TOK_MULTIPLY (276) 19
    TOK_DIVIDE (277) 20
    TOK_MODULO (278) 21
    TOK_EQUAL (279) 26
    TOK_N_EQUAL (280) 27
    TOK_DBL_PLUS (281) 34 35
    TOK_DBL_MINUS (282) 36 37
    TOK_GREATER (283) 22
    TOK_LESS (284) 23
    TOK_GR_EQUAL (285) 24
    TOK_LS_EQUAL (286) 25
    TOK_L_CURLY_BR (287) 67 69 71
    TOK_R_CURLY_BR (288) 67 69 71
    TOK_L_BR (289) 50 52 65 66
    TOK_R_BR (290) 50 52 65 66
    TOK_L_PARENTH (291) 31 43 55 58 73 75 85 86 87 88
    TOK_R_PARENTH (292) 31 43 55 58 73 75 85 86 87 88
    TOK_SEMICOLON (293) 3 8 9 12 13 88 89 90
    TOK_COMMA (294) 61 64 83
    TOK_COLON (295) 67
    TOK_DBL_COLON (296) 47
    TOK_DOT (297) 49 51
    TOK_DBL_DOT (298) 59
    TOK_ID <strVal> (299) 45 46 47 49 51 59 73 82 83
    TOK_INT <intVal> (300) 76
    TOK_FLOAT <floatVal> (301) 77
    TOK_STRING <strVal> (302) 78
    UMINUS (303) 32


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1 2
        on right: 0
    statement (51)
        on left: 3 4 5 6 7 8 9 10 11 12 13
        on right: 1 14 85 86 87 88
    statements (52)
        on left: 14 15
        on right: 1 14 69 71
    expression <strVal> (53)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 3 17 18 19 20 21 22 23 24 25 26 27 28 29 31 32 33 39 50 52 60 61 67 85 86 87 88 90
    term (54)
        on left: 31 32 33 34 35 36 37 38
        on right: 30
    assignexpr (55)
        on left: 39
        on right: 16
    primary (56)
        on left: 40 41 42 43 44
        on right: 38
    lvalue <symbol> (57)
        on left: 45 46 47 48
        on right: 34 35 36 37 39 40 49 50 54
    member (58)
        on left: 49 50 51 52
        on right: 48
    call (59)
        on left: 53 54 55
        on right: 41 51 52 53
    callsuffix (60)
        on left: 56 57
        on right: 54
    normcall (61)
        on left: 58
        on right: 53 55 56 59
    methodcall (62)
        on left: 59
        on right: 57
    elist (63)
        on left: 60 61 62
        on right: 58 61 65 88
    indexed (64)
        on left: 63 64
        on right: 64 66
    objectdef (65)
        on left: 65 66
        on right: 42
    indexedelem (66)
        on left: 67
        on right: 63 64
    block (67)
        on left: 69
        on right: 10
    $@1 (68)
        on left: 68
        on right: 69
    funcdef_block (69)
        on left: 71
        on right: 73 75
    $@2 (70)
        on left: 70
        on right: 71
    funcdef (71)
        on left: 73 75
        on right: 11 43 55
    $@3 (72)
        on left: 72
        on right: 73
    $@4 (73)
        on left: 74
        on right: 75
    const (74)
        on left: 76 77 78 79 80 81
        on right: 44
    idlist <strVal> (75)
        on left: 82 83 84
        on right: 73 75 83
    if_statement (76)
        on left: 85 86
        on right: 4
    while_statement (77)
        on left: 87
        on right: 5
    for_statement (78)
        on left: 88
        on right: 6
    return_statement (79)
        on left: 89 90
        on right: 7


State 0

    0 $accept: • program $end
    1 program: • statements statement
    2        | ε •  [$end]
   14 statements: • statements statement
   15           | ε •  [error, TOK_IF, TOK_WHILE, TOK_FOR, TOK_FUNCTION, TOK_RETURN, TOK_BREAK, TOK_CONTINUE, TOK_NOT, TOK_LOCAL, TOK_TRUE, TOK_FALSE, TOK_NIL, TOK_DBL_PLUS, TOK_DBL_MINUS, TOK_L_CURLY_BR, TOK_L_BR, TOK_L_PARENTH, TOK_SEMICOLON, TOK_DBL_COLON, TOK_ID, TOK_INT, TOK_FLOAT, TOK_STRING, UMINUS]

    $end      reduce using rule 2 (program)
    $default  reduce using rule 15 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: statements • statement
    3 statement: • expression TOK_SEMICOLON
    4          | • if_statement
    5          | • while_statement
    6          | • for_statement
    7          | • return_statement
    8          | • TOK_CONTINUE TOK_SEMICOLON
    9          | • TOK_BREAK TOK_SEMICOLON
   10          | • block
   11          | • funcdef
   12          | • TOK_SEMICOLON
   13          | • error TOK_SEMICOLON
   14 statements: statements • statement
   16 expression: • assignexpr
   17           | • expression TOK_PLUS expression
   18           | • expression TOK_MINUS expression
   19           | • expression TOK_MULTIPLY expression
   20           | • expression TOK_DIVIDE expression
   21           | • expression TOK_MODULO expression
   22           | • expression TOK_GREATER expression
   23           | • expression TOK_LESS expression
   24           | • expression TOK_GR_EQUAL expression
   25           | • expression TOK_LS_EQUAL expression
   26           | • expression TOK_EQUAL expression
   27           | • expression TOK_N_EQUAL expression
   28           | • expression TOK_AND expression
   29           | • expression TOK_OR expression
   30           | • term
   31 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   32     | • UMINUS expression
   33     | • TOK_NOT expression
   34     | • TOK_DBL_PLUS lvalue
   35     | • lvalue TOK_DBL_PLUS
   36     | • TOK_DBL_MINUS lvalue
   37     | • lvalue TOK_DBL_MINUS
   38     | • primary
   39 assignexpr: • lvalue TOK_ASSIGN expression
   40 primary: • lvalue
   41        | • call
   42        | • objectdef
   43        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   44        | • const
   45 lvalue: • TOK_ID
   46       | • TOK_LOCAL TOK_ID
   47       | • TOK_DBL_COLON TOK_ID
   48       | • member
   49 member: • lvalue TOK_DOT TOK_ID
   50       | • lvalue TOK_L_BR expression TOK_R_BR
   51       | • call TOK_DOT TOK_ID
   52       | • call TOK_L_BR expression TOK_R_BR
   53 call: • call normcall
   54     | • lvalue callsuffix
   55     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   65 objectdef: • TOK_L_BR elist TOK_R_BR
   66          | • TOK_L_BR indexed TOK_R_BR
   69 block: • TOK_L_CURLY_BR $@1 statements TOK_R_CURLY_BR
   73 funcdef: • TOK_FUNCTION TOK_ID TOK_L_PARENTH $@3 idlist TOK_R_PARENTH funcdef_block
   75        | • TOK_FUNCTION TOK_L_PARENTH $@4 idlist TOK_R_PARENTH funcdef_block
   76 const: • TOK_INT
   77      | • TOK_FLOAT
   78      | • TOK_STRING
   79      | • TOK_NIL
   80      | • TOK_TRUE
   81      | • TOK_FALSE
   85 if_statement: • TOK_IF TOK_L_PARENTH expression TOK_R_PARENTH statement
   86             | • TOK_IF TOK_L_PARENTH expression TOK_R_PARENTH statement TOK_ELSE statement
   87 while_statement: • TOK_WHILE TOK_L_PARENTH expression TOK_R_PARENTH statement
   88 for_statement: • TOK_FOR TOK_L_PARENTH elist TOK_SEMICOLON expression TOK_SEMICOLON elist TOK_R_PARENTH statement
   89 return_statement: • TOK_RETURN TOK_SEMICOLON
   90                 | • TOK_RETURN expression TOK_SEMICOLON

    error           shift, and go to state 4
    TOK_IF          shift, and go to state 5
    TOK_WHILE       shift, and go to state 6
    TOK_FOR         shift, and go to state 7
    TOK_FUNCTION    shift, and go to state 8
    TOK_RETURN      shift, and go to state 9
    TOK_BREAK       shift, and go to state 10
    TOK_CONTINUE    shift, and go to state 11
    TOK_NOT         shift, and go to state 12
    TOK_LOCAL       shift, and go to state 13
    TOK_TRUE        shift, and go to state 14
    TOK_FALSE       shift, and go to state 15
    TOK_NIL         shift, and go to state 16
    TOK_DBL_PLUS    shift, and go to state 17
    TOK_DBL_MINUS   shift, and go to state 18
    TOK_L_CURLY_BR  shift, and go to state 19
    TOK_L_BR        shift, and go to state 20
    TOK_L_PARENTH   shift, and go to state 21
    TOK_SEMICOLON   shift, and go to state 22
    TOK_DBL_COLON   shift, and go to state 23
    TOK_ID          shift, and go to state 24
    TOK_INT         shift, and go to state 25
    TOK_FLOAT       shift, and go to state 26
    TOK_STRING      shift, and go to state 27
    UMINUS          shift, and go to state 28

    statement         go to state 29
    expression        go to state 30
    term              go to state 31
    assignexpr        go to state 32
    primary           go to state 33
    lvalue            go to state 34
    member            go to state 35
    call              go to state 36
    objectdef         go to state 37
    block             go to state 38
    funcdef           go to state 39
    const             go to state 40
    if_statement      go to state 41
    while_statement   go to state 42
    for_statement     go to state 43
    return_statement  go to state 44


State 3

    0 $accept: program $end •

    $default  accept


State 4

   13 statement: error • TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 45


State 5

   85 if_statement: TOK_IF • TOK_L_PARENTH expression TOK_R_PARENTH statement
   86             | TOK_IF • TOK_L_PARENTH expression TOK_R_PARENTH statement TOK_ELSE statement

    TOK_L_PARENTH  shift, and go to state 46


State 6

   87 while_statement: TOK_WHILE • TOK_L_PARENTH expression TOK_R_PARENTH statement

    TOK_L_PARENTH  shift, and go to state 47


State 7

   88 for_statement: TOK_FOR • TOK_L_PARENTH elist TOK_SEMICOLON expression TOK_SEMICOLON elist TOK_R_PARENTH statement

    TOK_L_PARENTH  shift, and go to state 48


State 8

   73 funcdef: TOK_FUNCTION • TOK_ID TOK_L_PARENTH $@3 idlist TOK_R_PARENTH funcdef_block
   75        | TOK_FUNCTION • TOK_L_PARENTH $@4 idlist TOK_R_PARENTH funcdef_block

    TOK_L_PARENTH  shift, and go to state 49
    TOK_ID         shift, and go to state 50


State 9

   16 expression: • assignexpr
   17           | • expression TOK_PLUS expression
   18           | • expression TOK_MINUS expression
   19           | • expression TOK_MULTIPLY expression
   20           | • expression TOK_DIVIDE expression
   21           | • expression TOK_MODULO expression
   22           | • expression TOK_GREATER expression
   23           | • expression TOK_LESS expression
   24           | • expression TOK_GR_EQUAL expression
   25           | • expression TOK_LS_EQUAL expression
   26           | • expression TOK_EQUAL expression
   27           | • expression TOK_N_EQUAL expression
   28           | • expression TOK_AND expression
   29           | • expression TOK_OR expression
   30           | • term
   31 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   32     | • UMINUS expression
   33     | • TOK_NOT expression
   34     | • TOK_DBL_PLUS lvalue
   35     | • lvalue TOK_DBL_PLUS
   36     | • TOK_DBL_MINUS lvalue
   37     | • lvalue TOK_DBL_MINUS
   38     | • primary
   39 assignexpr: • lvalue TOK_ASSIGN expression
   40 primary: • lvalue
   41        | • call
   42        | • objectdef
   43        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   44        | • const
   45 lvalue: • TOK_ID
   46       | • TOK_LOCAL TOK_ID
   47       | • TOK_DBL_COLON TOK_ID
   48       | • member
   49 member: • lvalue TOK_DOT TOK_ID
   50       | • lvalue TOK_L_BR expression TOK_R_BR
   51       | • call TOK_DOT TOK_ID
   52       | • call TOK_L_BR expression TOK_R_BR
   53 call: • call normcall
   54     | • lvalue callsuffix
   55     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   65 objectdef: • TOK_L_BR elist TOK_R_BR
   66          | • TOK_L_BR indexed TOK_R_BR
   76 const: • TOK_INT
   77      | • TOK_FLOAT
   78      | • TOK_STRING
   79      | • TOK_NIL
   80      | • TOK_TRUE
   81      | • TOK_FALSE
   89 return_statement: TOK_RETURN • TOK_SEMICOLON
   90                 | TOK_RETURN • expression TOK_SEMICOLON

    TOK_NOT        shift, and go to state 12
    TOK_LOCAL      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_FALSE      shift, and go to state 15
    TOK_NIL        shift, and go to state 16
    TOK_DBL_PLUS   shift, and go to state 17
    TOK_DBL_MINUS  shift, and go to state 18
    TOK_L_BR       shift, and go to state 20
    TOK_L_PARENTH  shift, and go to state 21
    TOK_SEMICOLON  shift, and go to state 51
    TOK_DBL_COLON  shift, and go to state 23
    TOK_ID         shift, and go to state 24
    TOK_INT        shift, and go to state 25
    TOK_FLOAT      shift, and go to state 26
    TOK_STRING     shift, and go to state 27
    UMINUS         shift, and go to state 28

    expression  go to state 52
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    member      go to state 35
    call        go to state 36
    objectdef   go to state 37
    const       go to state 40


State 10

    9 statement: TOK_BREAK • TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 53


State 11

    8 statement: TOK_CONTINUE • TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 54


State 12

   16 expression: • assignexpr
   17           | • expression TOK_PLUS expression
   18           | • expression TOK_MINUS expression
   19           | • expression TOK_MULTIPLY expression
   20           | • expression TOK_DIVIDE expression
   21           | • expression TOK_MODULO expression
   22           | • expression TOK_GREATER expression
   23           | • expression TOK_LESS expression
   24           | • expression TOK_GR_EQUAL expression
   25           | • expression TOK_LS_EQUAL expression
   26           | • expression TOK_EQUAL expression
   27           | • expression TOK_N_EQUAL expression
   28           | • expression TOK_AND expression
   29           | • expression TOK_OR expression
   30           | • term
   31 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   32     | • UMINUS expression
   33     | • TOK_NOT expression
   33     | TOK_NOT • expression
   34     | • TOK_DBL_PLUS lvalue
   35     | • lvalue TOK_DBL_PLUS
   36     | • TOK_DBL_MINUS lvalue
   37     | • lvalue TOK_DBL_MINUS
   38     | • primary
   39 assignexpr: • lvalue TOK_ASSIGN expression
   40 primary: • lvalue
   41        | • call
   42        | • objectdef
   43        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   44        | • const
   45 lvalue: • TOK_ID
   46       | • TOK_LOCAL TOK_ID
   47       | • TOK_DBL_COLON TOK_ID
   48       | • member
   49 member: • lvalue TOK_DOT TOK_ID
   50       | • lvalue TOK_L_BR expression TOK_R_BR
   51       | • call TOK_DOT TOK_ID
   52       | • call TOK_L_BR expression TOK_R_BR
   53 call: • call normcall
   54     | • lvalue callsuffix
   55     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   65 objectdef: • TOK_L_BR elist TOK_R_BR
   66          | • TOK_L_BR indexed TOK_R_BR
   76 const: • TOK_INT
   77      | • TOK_FLOAT
   78      | • TOK_STRING
   79      | • TOK_NIL
   80      | • TOK_TRUE
   81      | • TOK_FALSE

    TOK_NOT        shift, and go to state 12
    TOK_LOCAL      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_FALSE      shift, and go to state 15
    TOK_NIL        shift, and go to state 16
    TOK_DBL_PLUS   shift, and go to state 17
    TOK_DBL_MINUS  shift, and go to state 18
    TOK_L_BR       shift, and go to state 20
    TOK_L_PARENTH  shift, and go to state 21
    TOK_DBL_COLON  shift, and go to state 23
    TOK_ID         shift, and go to state 24
    TOK_INT        shift, and go to state 25
    TOK_FLOAT      shift, and go to state 26
    TOK_STRING     shift, and go to state 27
    UMINUS         shift, and go to state 28

    expression  go to state 55
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    member      go to state 35
    call        go to state 36
    objectdef   go to state 37
    const       go to state 40


State 13

   46 lvalue: TOK_LOCAL • TOK_ID

    TOK_ID  shift, and go to state 56


State 14

   80 const: TOK_TRUE •

    $default  reduce using rule 80 (const)


State 15

   81 const: TOK_FALSE •

    $default  reduce using rule 81 (const)


State 16

   79 const: TOK_NIL •

    $default  reduce using rule 79 (const)


State 17
